--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -15,6 +15,7 @@
 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
 {% endfor %}
 </ul>
+    <a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
 {% else %}
 <strong>No pages currently in category.</strong>
 {% endif %}
@@ -23,6 +24,8 @@ The specified category does not exist.
 {% endif %}
 </div>
 <a href="/rango/">Index</a><br />
+
+
 </body>
 
 </html>
