--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -39,7 +39,7 @@ hey there partner! <br />
 
 
 <div>
-<div><h2Most Viewed Pages</h2></div>
+<div><h2>Most Viewed Pages</h2></div>
 {% if pages %}
 <ul>
     {% for page in pages %}
@@ -57,5 +57,6 @@ hey there partner! <br />
     <img src="{% static 'images/rango.jpg' %}"
 alt="Picture of Rango" />
 </div>
+<a href="/rango/add_category/">Add a New Category</a><br />
 </body>
 </html>
