--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
 <html>
-    <head>
-        <title>Rango - Add Page</title>
-    </head>
+    {% block title_block %}
+    Add a Page
+    {% endblock %}
     <body>
         {% if category %}
         <h1>Add a Page to {{category.name}}</h1>
