--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
 <html>
-<head>
-    <title>Rango</title>
-</head>
+{% block title_block %}
+    Add a Category
+{% endblock %}
 <body>
     <h1>Add a Category</h1>
     <div>
