--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 <html>
 
-<head>
-<title>Rango</title>
-</head>
+{% block title_block %}
+    {% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{% endblock %}
 
-<body>
-<div>
+{% block body_block %}
 {% if category %}
 <h1>{{ category.name }}</h1>
 {% if pages %}
@@ -15,17 +19,14 @@
 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
 {% endfor %}
 </ul>
-    <a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
 {% else %}
 <strong>No pages currently in category.</strong>
 {% endif %}
+
+<a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
 {% else %}
 The specified category does not exist.
 {% endif %}
-</div>
-<a href="/rango/">Index</a><br />
-
-
-</body>
+{% endblock %}
 
 </html>
