--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 <html lang="en">
-<head>
-<title>Rango</title>
-</head>
-<body>
+{% block title_block %}
+Homepage
+{% endblock %}
+{% block body_block %}
 <h1>Rango says...</h1>
 <div>
-hey there partner! <br />
+hey there partner! <br/>
 <strong>{{ boldmessage }}</strong><br />
 </div>
 <div>
@@ -27,7 +28,7 @@ hey there partner! <br />
 <ul>
     {% for category in categories %}
         <li>
-            <a href="/rango/category/{{category.slug}}">{{category.name}}</a>
+            <a href="{% url 'rango:show_category' category.slug %}">{{category.name}}</a>
         </li>
     {% endfor %}
 </ul>
@@ -53,10 +54,10 @@ hey there partner! <br />
 
 
 <div>
-<a href="/rango/about/">About</a><br />
+<a href="{% url 'rango:about' %}">About</a><br/>
     <img src="{% static 'images/rango.jpg' %}"
 alt="Picture of Rango" />
 </div>
-<a href="/rango/add_category/">Add a New Category</a><br />
-</body>
+<a href="/rango/add_category/">Add a New Category</a><br/>
+{% endblock %}
 </html>
