--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -14,17 +14,25 @@
 	</head>
 	<body>
 		<div>
-			{% block sidebar_block %}
-			{% get_category_list category %}
-			{% endblock %}
-		<div>
-		<div>
 		{% block body_block %}
 			hello world.
 		{% endblock %}
 		</div>
+		<div>
+			{% block sidebar_block %}
+			{% get_category_list category %}
+			{% endblock %}
+		<div>
+
 			<ul>
+			{% if user.is_authenticated %}
+				<li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
+				<li><a href="{% url 'rango:logout' %}">Logout</a></li>
 				<li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
+			{% else %}
+				<li><a href="{% url 'rango:register' %}">Sign Up</a></li>
+				<li><a href="{% url 'rango:login' %}">Login</a></li>
+			{% endif %}
 				<li><a href="{% url 'rango:about' %}">About</a></li>
 				<li><a href="{% url 'rango:index' %}">Index</a></li>
 			</ul>
