--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -61,4 +61,6 @@ alt="Picture of Rango" />
 </div>
 <a href="/rango/add_category/">Add a New Category</a><br/>
 {% endblock %}
+
+<p>Visits: {{ visits }}</p>
 </html>
