--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -5,7 +5,7 @@
 {% block title_block %}
 About Rango
 {% endblock %}
-<body>
+{% block body_block %}
 <h1>Rango says...</h1>
 <h1>here is the about page.</h1>
 <div>
@@ -13,12 +13,14 @@ hey there partner! <br />
 <strong>This tutorial has been put
 together by jianlin </strong><br />
 </div>
+<p>Visits: {{ visits }}</p><br/>
 <div>
 <a href="{% url 'rango:index' %}">index</a><br />
+
 <img src="{% static 'images/rango.jpg' %}"
 alt="Picture of Rango" />
     <br><img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a
 Cat."/></br>
 </div>
-</body>
-</html>
+
+{% endblock %}
